fix: layout problem with tiles-mode every 100 items #767

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -622,8 +622,9 @@ button .icon + .label {
             .entry-details {
                 font-size: 80%;
             }
-            &.page-separator::before {
-                content: '';
+            &.page-separator {
+                margin-top: 0;
+                &::before { content: ''; }
             }
             input[type=checkbox] {
                 margin: 0;
